# iced_widgets

./: .gitignore  Cargo.toml  README.md
examples/hexview/: Cargo.toml
examples/hexview/src/: main.rs
src/: lib.rs
src/core/: mod.rs
src/graphics/: hexview.rs  mod.rs
src/native/: hexview.rs  mod.rs
src/style/: hexview.rs  mod.rs
