[package]
name = "iced_widgets"
version = "0.1.0"
authors = ["Mark Nokalt <marknokalt@live.com>"]
license = "MIT"
edition = "2018"

[features]
default = ["hexview"]
hexview = []

[dependencies]
iced_native = { git = "https://github.com/hecrj/iced", rev = "73811c3" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "73811c3" }
